syntax = "proto3";

package subscription.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "subscription/v1/cronspec.proto";

option go_package = "github.com/crypto-org-chain/chain-main/x/subscription/types";

// https://github.com/crypto-org-chain/chain-main/blob/master/x/subscription/spec/05_params.md
message Params {
    bool subscription_enabled = 1;
    uint32 gas_per_collection = 2;
    uint32 failure_tolerance = 3;
}

// https://github.com/crypto-org-chain/chain-main/blob/master/x/subscription/spec/02_state.md
message Plan {
    string owner = 1;
    string title = 2;
    string description = 3;
    repeated cosmos.base.v1beta1.Coin price = 4 [
        (gogoproto.nullable)     = false,
        (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
        (gogoproto.moretags)     = "yaml:\"price\""
    ];
    uint32 duration_secs = 5;
    CronSpec cron_spec = 6 [(gogoproto.nullable) = false];
    int32 tzoffset = 7;  // in seconds
    uint64 plan_id = 8;
}

// https://github.com/crypto-org-chain/chain-main/blob/master/x/subscription/spec/02_state.md
message Subscription {
    uint64 subscription_id = 1;
    uint64 plan_id = 2;
    string subscriber = 3;
    uint64 create_time = 4;
    uint64 next_collection_time = 5;
    uint64 expiration_time = 6;
    uint32 payment_failures = 7;
}
